--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,7 @@ jobs:
 
       - name: Run pytest
         run: |
-          pytest --cov conftest --cov-report=xml --junitxml=junit.xml tests
+          pytest --cov confspec --cov-report=xml --junitxml=junit.xml tests
 
       - name: Upload coverage to CodeCov
         if: ${{ !cancelled() && matrix.python-version == '3.11' }}
